# SimplePathTracer

./: .gitmodules  CMakeLists.txt  README.md  test.sh
example/: README.md
example/box/: box.mtl  box.obj.copy  box.xml  cornell-box.xml
example/cornell-box/: cornell-box.xml
example/glass-box/: box.mtl
example/metal box/: box.mtl
example/metal-box/: box.mtl  cornell-box.xml
example/phong-veach-mis/: veach-mis.mtl  veach-mis.xml
example/simple cornell-box/: cornell-box.xml
example/staircase/: staircase.xml  stairscase.mtl
example/veach-mis/: veach-mis.mtl  veach-mis.xml
include/: AABB.hpp  BVH.hpp  Camera.hpp  Hittable.hpp  Light.hpp  Material.hpp  Random.hpp  Ray.hpp  Texture.hpp  Trace.hpp  Triangle.hpp  Utils.hpp  Vec.hpp
src/: AABB.cpp  AABB.hpp  BVH.cpp  BVH.hpp  Camera.cpp  Camera.hpp  Hittable.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Random.cpp  Random.hpp  Ray.cpp  Ray.hpp  Texture.cpp  Trace.cpp  Trace.hpp  Triangle.cpp  Triangle.hpp  Vec.hpp  main.cpp
test/: hitTest.cpp  materialTest.cpp  reflectTest.cpp  refractTest.cpp  xmlTest.cpp
